syntax = "proto3";

package permissions;

option go_package = "github.com/e2b-dev/infra/packages/envd";

message AccessControl {
  optional string user = 1;
}
